add html editor web

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
                 <li>Body text footnotes will be transformed into hyperlinks pointing to endnotes</li>
                 <li>Endnote footnotes will be transformed into hyperlinks pointing back to references</li>
             </ul>
+        <p><strong><a href="https://html-cleaner.com/">Text to HTML tool</a></strong> for converting text to HTML and editing</p>
+
         </div>
         
         <div class="flex-row">
@@ -160,7 +162,7 @@
             ></textarea>
         </div>
 
-        <button id="transformBtn" class="primary">Transform Both</button>
+        <button id="transformBtn" class="primary">Run</button>
 
         <div id="statusMessage" class="status"></div>
 
